patterns/app-structure.html 새로 번역하거나 다듬음

--- a/patterns/app-structure.html
+++ b/patterns/app-structure.html
@@ -112,14 +112,14 @@ Gmail이나 Google Play는 다양한 데이터 뷰가 계층 구조로 조합되
 액션 바에 앱의 아이콘이나 제목을 사용합니다.
 </li>
 <li>
-만약 최상위 수준이 여러 개의 뷰를 사용하거나 여러 사용자 계정 데이터 간의 전환이 중요하면,
+만약 최상위 수준이 여러 개의 뷰를 사용하거나 여러 사용자 계정 데이터 사이의 전환이 중요하면,
 뷰 사이의 이동이 사용자에게 명확하게 보이도록 액션 바에 뷰 컨트롤을 붙이세요.
 </li>
 <li>
-앱에서 사용자가 컨텐츠를 만들어 낸다면 최상위 수준에서 컨텐츠를 바로 접근할 수 있게 하세요.
+사용자가 앱에서 컨텐츠를 만들어 낸다면 최상위 수준에서 바로 컨텐츠로 접근할 수 있게 하세요.
 </li>
 <li>
-만약 컨텐츠 검색이 가능하다면 액션 바에 검색 액션을 추가하여 사용자가 탐색 계층 사이로 이동할 수 있게 하세요.
+컨텐츠를 검색할 수 있으면 액션 바에 검색 액션을 추가하여 사용자가 탐색 계층 사이로 이동할 수 있게 하세요.
 </li>
 </ul>
 </div>
@@ -127,9 +127,9 @@ Gmail이나 Google Play는 다양한 데이터 뷰가 계층 구조로 조합되
 
     <img src="../media/app_structure_gmail.png"><div class="figure-caption">
       이메일은 생산성과 관련이 있습니다.
-      그래서 효율적이고 데이터가 잘 밀집되어 동작하는 리스트를 씁니다.
+      그래서 효율적이고 쉽게 훑어 볼 수 있는 리스트에 고밀도의 데이터를 담습니다.
       탐색은 계정과 최근 레이블 사이를 이동하게 합니다.
-      편지쓰기 및 검색 아이콘은 하단의 분할 액션 바에 잘 보이도록 배치합니다.
+      편지쓰기와 검색 아이콘은 아래의 분할 액션 바에 잘 보입니다.
     </div>
 
   </div>
@@ -143,7 +143,7 @@ Gmail이나 Google Play는 다양한 데이터 뷰가 계층 구조로 조합되
 <p>
 액션 바를 넘어 앱의 정체성을 만듭시다.
 여러분이 만드는 앱의 정체성은 데이터와 데이터를 구성하는 방법, 사용자와 상호작용하는 방식에 따라 결정됩니다.
-특히, 미디어 위주의 애플리케이션에서는 단순한 리스트 뷰를 단조롭게 만들지 말고 데이터를 뽐낼 수 있는 독특한 레이아웃을 시도해 보세요.
+특히 미디어 위주의 앱에서는 단순한 리스트 뷰를 단조롭게 만들지 말고 데이터를 뽐낼 수 있는 독특한 레이아웃을 시도해 보세요.
 </p>
 
   </div>
@@ -151,8 +151,8 @@ Gmail이나 Google Play는 다양한 데이터 뷰가 계층 구조로 조합되
 
     <img src="../media/app_structure_music_lndscp.png"><div
     class="figure-caption">
-    3D 회전목마(carousel) 레이아웃은 커버 아트를 돋보이게 해 주고 뮤직 앱 전체에 독창성을 부여합니다.
-    최근 뷰에서는 기본적으로 사용자가 마지막에 들었던 음악을 맞춰줍니다.
+    3D 회전목마(carousel) 레이아웃은 커버 아트를 돋보이게 하고 뮤직 앱 전체를 독창적으로 보이게 합니다.
+    최근 뷰에서는 기본적으로 사용자가 마지막에 들었던 음악을 보여줍니다.
    </div>
 
   </div>
@@ -163,20 +163,20 @@ Gmail이나 Google Play는 다양한 데이터 뷰가 계층 구조로 조합되
 
 
 <p>
-일반적인 깊이 있는 데이터 기반 앱의 목적은 데이터를 보고 조작할 수 있는 상세 뷰를 조직적인 카테고리를 통해 탐색하는 것입니다.
-앱을 피상적으로 유지하여 사용자가 탐색 단계를 인지하는 부담을 덜어 주세요.
+일반적인 깊이 있는 데이터 기반 앱은 조직적인 카테고리를 통해 데이터를 보고 조작할 수 있는 상세 뷰로 이동하고자 합니다.
+카테고리로 앱을 한눈에 보이게 유지하여 사용자가 탐색 단계를 인지하는 부담을 덜어 주세요.
 </p>
 
 <p>
-앱에서 최상위 단계에서 상세 뷰로 도달하기 위해 거쳐야 할 단계는 보통 앱의 컨텐츠 구조에 영향을 받지만,
-탐색할 때 인지 부담을 덜어줄 수 있는 방법이 여럿 존재합니다.
+앱의 최상위 단계에서 상세 뷰로 도달하기 위해 거쳐야 할 단계는 보통 앱의 컨텐츠 구조에 영향을 받지만,
+탐색할 때 인지 부담을 덜어줄 수 있는 여러가지 방법이 있습니다.
 </p>
 
-<h4>탭을 통해 카테고리 선택과 데이터 표현을 통합하세요</h4>
+<h4>탭을 이용해 카테고리 선택과 데이터 표현을 합쳐주세요</h4>
 
 <p>
-카테고리가 유사하거나 몇 개 없다면 탭을 사용하는 것이 정답일 수 있습니다.
-계층 수준을 없애고 사용자가 데이터에 집중하게 하는 이점이 있습니다.
+카테고리가 유사하거나 수가 적다면 탭을 사용하는 것이 정답일 수 있습니다.
+탭은 계층 수준을 없애고 사용자가 데이터에 주목하게 하는 이점이 있습니다.
 데이터가 많은 카테고리들을 좌우로 이동하여 탐색하는 것은 명시적 탐색 단계라기보다는 일반적인 브라우즈 경험과 비슷합니다.
 </p>
 
@@ -188,28 +188,28 @@ Gmail이나 Google Play는 다양한 데이터 뷰가 계층 구조로 조합되
   <div class="layout-content-col span-8">
 
 <p>
-만약 카테고리들이 서로 유사하거나 예측 가능하거나 밀접하다면 스크롤 탭(Scrolling tab)을 사용하세요.
-탭의 일부 항목만 목록에 표시합니다.
-스크롤 탭에 표시되는 탭 갯수를 적당히 유지하면 탐색을 덜 힘들게 해 줍니다.
+카테고리가 비슷하거나 예측하기 쉽거나 밀접하게 연관되어 있다면 스크롤 탭(Scrolling tab)을 사용하세요.
+스크롤 탭은 일부 항목만 목록에 표시합니다.
+표시하는 탭 수를 적당히 유지하면 탐색이 더 편해집니다.
 중요한 규칙이 있습니다. 탭이 5~7개를 넘어가면 안 됩니다.</p>
 
     <img src="../media/app_structure_scrolltabs.png"><div
     class="figure-caption">
       Google Play는 탭을 사용하여 카테고리 선택과 컨텐츠를 동시에 보여줍니다.
-    사용자는 컨텐츠를 좌우로 스와이프하여 카테고리 사이의 탐색을 할 수 있습니다.
+    사용자는 컨텐츠를 좌우로 스와이프하여 카테고리 사이를 탐색할 수 있습니다.
     </div>
 
   </div>
   <div class="layout-content-col span-5">
 
 <p>
-탭들 간의 카테고리가 밀접하지 않으면 고정 탭을 선호하는 게 낫습니다.
+탭 사이의 카테고리에 밀접한 연관관계가 없다면 고정 탭을 쓰세요.
 모든 카테고리가 탭의 항목으로 보입니다.
 </p>
 
     <img src="../media/app_structure_fixedtabs.png"><div
     class="figure-caption">
-      YouTube는 상대적으로 서로 연관 없는 기능들을 전환하기 위해 고정 탭을 사용합니다.
+      YouTube는 서로 다르거나 상대적으로 연관이 적은 기능 전환에 고정 탭을 사용합니다.
    </div>
 
 
@@ -220,16 +220,15 @@ Gmail이나 Google Play는 다양한 데이터 뷰가 계층 구조로 조합되
 <h4>계층을 가로지르도록 하세요</h4>
 
 <p>
-목표에 빨리 도달하기 위해 지름길을 허용하는 것은 이점이 있습니다.
-드롭다운이나 분할 리스트 아이템을 통해
-리스트나 그리드 뷰의 데이터 항목에서 액션을 바로 수행하도록 할 수 있습니다.
-이 방법은 계층 아래로 탐색할 필요없이 데이터에서 액션을 수행할 수 있게 합니다.
+지름길로 목표에 빨리 도달하게 해 주면 좋습니다.
+리스트나 그리드 뷰에서 드롭다운이나 분할 리스트 아이템을 통해 수행할 액션을 바로 보여줄 수 있습니다.
+이 방법은 계층 아래로 내려가지 않고 데이터에서 액션을 선택할 수 있게 합니다.
 </p>
 
 
 <img src="../media/app_structure_shortcut_on_item.png">
 <div class="figure-caption">
-Music은 사용자가 카테고리 뷰(앨범)에서 데이터 항목(노래)으로 직접 접근할 수 있기 때문에,
+Music은 사용자가 카테고리 뷰(앨범)에서 데이터 항목(노래)의 액션을 바로 할 수 있기 때문에,
 노래 상세 뷰를 탐색할 필요가 없습니다.
 </div>
 
@@ -237,66 +236,64 @@ Music은 사용자가 카테고리 뷰(앨범)에서 데이터 항목(노래)으
 <h4>여러 데이터 항목에 대해 행동하기</h4>
 
 <p>
-카테고리 뷰는 대부분 사람들을 상세적인 컨텐츠로 안내하는 기능을 하지만,
-데이터 모음으로 행동하는 것에도 이점이 있다는 것을 명심하세요.
+대부분 카테고리 뷰는 사람들을 상세 컨텐츠로 안내하는 기능을 하지만,
+데이터 모음에서 할 일을 선택하는 것도 이점이 있다는 것을 명심하세요.
 </p>
 
 <p>
-예를 들어, 상세 뷰에서 항목 삭제를 허용하면 카테고리 뷰에서 여러 아이템 삭제도 허용해야 합니다.
-개별 뷰의 행동을 항목 모음에는 어떻게 적용할 수 있을지 분석하세요.
-카테고리 뷰에서 다중 선택을 통해 여러 항목에 행동을 할 수 있도록 합시다.
+예를 들어 상세 뷰에서 항목 삭제를 허용하면 카테고리 뷰에서 여러 항목 삭제도 허용해야 합니다.
+개별 뷰에서 할 수 있는 일을 항목 모음에서는 어떻게 수행할 수 있을지 분석하세요.
+카테고리 뷰에서 다중 선택을 통해 여러 항목에 한번에 작업을 할 수 있도록 합시다.
 </p>
 
 <h2 id="details">상세 뷰</h2>
 
 
-<p>상세 뷰는 사용자의 데이터를 보고 행동하게 합니다. 상세 뷰의
-레이아웃은 표현될 데이터에 달려있으며 앱에 따라 다양합니다.</p>
+<p>상세 뷰는 사용자가 데이터를 보고 다루도록 합니다. 상세 뷰의
+레이아웃은 보여 줄 데이터에 따라 달라지며 앱에 따라서도 다양합니다.</p>
 
 
 <div class="layout-content-row">
   <div class="layout-content-col span-4">
 
 <h4>레이아웃</h4>
-<p>상세 뷰에서 동작시키고 조작할 엑티비티와 이용할 레이아웃에 따라
-    엑티비티들을 고려하세요. 전체 화면으로 정신 사납지 않으면서
-    실감나게 하려면면 소등된 것 (기타 UI가 최소화 된 버전) 을 만들어야
-    합니다.</p>
+<p>상세 뷰에서 사용할 액티비티를 고려하여 레이아웃을 조정하세요.
+    실감 컨텐츠를 전체화면으로 어지럽지 않게 보여주려면 UI 숨기기(lights-out) 모드를 사용하세요.</p>
 
     <img src="../media/app_structure_people_detail.png">
 </div>
   <div class="layout-content-col span-9">
 
     <img src="../media/app_structure_book_detail_page_flip.png"><div class="figure-caption">
-      Google Book의 상세 뷰는 실제 책의 독서 방식을 모사하였습니다. 
-      페이지 넘기는 에니메이션이 그 개념을 확실히 하죠. 
-      실감나는 사용자 경험을 만들기 위해 앱은 시스템의 UI 어포던스를 모두 제거하는 소등을 했습니다.
+      Google Book의 상세 뷰는 모두 실제 책을 읽는 방법을 흉내낸 것입니다. 
+      페이지를 넘기는 애니메이션이 그 개념을 확실히 하죠. 
+      실감나는 사용자 경험을 만들기 위해 앱은 시스템의 UI 어포던스를 모두 제거하는 UI 숨기기를 했습니다.
     </div>
 
     <div class="figure-caption">
       피플 앱의 상세 뷰의 목적은 커뮤니케이션 옵션을 보여주는 것입니다. 
-      리스트 뷰는 효과적으로 훑어보고 휴대전화 번호, 이메일 주소, 다른 항목등을 쉽게 접근하게 합니다.
+      리스트 뷰를 이용해 휴대전화 번호, 이메일 주소와 다른 항목을 효율적으로 훑어보고 빠르게 접근합니다.
       항목 하나가 전화 걸기와 문자 보내기 등으로 나눈 항목으로 사용하기도 합니다.
     </div>
   </div>
 </div>
 
 
-<h4>상세 뷰들을 효과적으로 탐색하기</h4>
+<h4>상세 뷰를 효과적으로 탐색하기</h4>
 
-<p>사용자가 순차적으로 여러 아이템을 보길 원할 것 같으면 사용자에게 상세 뷰 들을 탐색할 수 있게 하세요.
-그렇게 하기 위해 뷰 스와이프나, 다른 방법(필름 스트립) 등을 도입하세요.</p>
+<p>사용자가 순차적으로 여러 아이템을 보고 싶어 할 것 같으면 상세 뷰 안에서 탐색할 수 있도록 하세요.
+그렇게 하기 위해 뷰 스와이프나 필름 스트립 같은 다른 방법을 도입하세요.</p>
 
 
 <img src="../media/app_structure_gmail_swipe.png">
 <div class="figure-caption">
-  Gmail은 상세 뷰에서 다른 상세 뷰로 탐색하기 위해 뷰 스와이프를 사용합니다.
+  Gmail은 상세 뷰에서 다른 상세 뷰로 이동하기 위해 뷰 스와이프를 사용합니다.
 </div>
 
 
 <img src="../media/app_structure_gallery_filmstrip.png">
 <div class="figure-caption">
-  갤러리는 이미지 들을 왼쪽이나 오른쪽으로 이동하는 스와이프 제스처를 제공하는 것 이외에 필름 스트립 컨트롤을 제공합니다.
+  갤러리는 이미지를 왼쪽이나 오른쪽으로 이동하는 스와이프 제스처 말고도 필름 스트립 컨트롤을 제공합니다.
   필름 스트립 컨트롤에서는 특정 이미지로 바로 이동할 수 있습니다.
 </div>
 
@@ -306,7 +303,7 @@ Music은 사용자가 카테고리 뷰(앨범)에서 데이터 항목(노래)으
 
 <ul>
 <li>
-<p>화면에 유용한 컨텐츠를 표현할 방법을 찾으세요.</p>
+<p>시작 화면에 유용한 컨텐츠를 표현할 방법을 찾으세요.</p>
 </li>
 <li>
 <p>일관된 탐색을 위해 액션 바를 사용하세요.</p>
