최근 추가된 내용의 잘못된 url 경로 수정

--- a/patterns/navigation.html
+++ b/patterns/navigation.html
@@ -154,7 +154,7 @@ exiting.</p>
 screen. Up or Back from the compose screen would take the user to the Inbox, and from there the
 Back button continues to Home.</p>
 
-<img src="/design/media/navigation_from_outside_back.png">
+<img src="../media/navigation_from_outside_back.png">
 
 <img src="../media/navigation_from_outside_back.png">
 
@@ -177,7 +177,7 @@ events. Touching Back from the interstitial returns the user to Gmail. Touching 
 event takes the user away from the interstitial and into the full Calendar app to display details of
 the event. From the event details, Up and Back navigate to the top-level view of Calendar.</p>
 
-<img src="/design/media/navigation_indirect_notification.png">
+<img src="../media/navigation_indirect_notification.png">
 
 <h4>Pop-up notifications</h4>
 
@@ -192,7 +192,7 @@ notification's interstitial screen. Back dismisses the pop-up notification. If t
 from the pop-up into the notifying app, Up and Back follow the rules for standard notifications,
 navigating within the app.</p>
 
-<img src="/design/media/navigation_popup_notification.png">
+<img src="../media/navigation_popup_notification.png">
 
 <h2 id="between-apps">Navigation Between Apps</h2>
 
@@ -230,7 +230,7 @@ to see its details, the user remains in the same task, extending it by adding ac
 the Share action prompts the user with a dialog listing each of the activities (from different apps)
 which have registered to handle the Share intent.</p>
 
-<img src="/design/media/navigation_between_apps_inward.png">
+<img src="../media/navigation_between_apps_inward.png">
 
 <p>When the user elects to share via Gmail, Gmail's compose activity is added as a continuation of
 Task A&mdash;no new task is created. If Gmail had its own task running in the background, it would
@@ -240,13 +240,13 @@ be unaffected.</p>
 the book details activity. Subsequent touches of Back continue to navigate back through the Play
 Store, ultimately arriving at Home.</p>
 
-<img src="/design/media/navigation_between_apps_back.png">
+<img src="../media/navigation_between_apps_back.png">
 
 <p>However, by touching Up from the compose activity, the user indicates a desire to remain within
 Gmail. Gmail's conversation list activity appears, and a new Task B is created for it. New tasks are
 always rooted to Home, so touching Back from the conversation list returns there.</p>
 
-<img src="/design/media/navigation_between_apps_up.png">
+<img src="../media/navigation_between_apps_up.png">
 
 <p>Task A persists in the background, and the user may return to it later (for example, via the
 Recents screen). If Gmail already had its own task running in the background, it would be replaced
