--- a/patterns/settings.html
+++ b/patterns/settings.html
@@ -8,10 +8,10 @@ behave. This benefits users because:</p>
 <ul>
 <li>You don't need to interrupt them with the same questions over and over when certain situations
 arise. The settings predetermine what will always happen in those situations (see design
-principle: <a href="/design/get-started/principles.html#decide-for-me">Decide for me but
+principle: <a href="../get-started/principles.html#decide-for-me">Decide for me but
 let me have the final say</a>).</li>
 <li>You help them feel at home and in control (see design principle:
-<a href="/design/get-started/principles.html#make-it-mine">Let me make it mine</a>).</li>
+<a href="../get-started/principles.html#make-it-mine">Let me make it mine</a>).</li>
 </ul>
 
 <h2 id="flow-structure">Flow and Structure</h2>
@@ -19,11 +19,11 @@ let me have the final say</a>).</li>
 <h4 id="settings-access">Provide access to Settings in the action overflow</h4>
 
 <p>Settings is given low prominence in the UI because it's not frequently needed. Even if there's
-room in the <a href="/design/patterns/actionbar.html">action bar</a>, never make Settings
+room in the <a href="../patterns/actionbar.html">action bar</a>, never make Settings
 an action button. Always keep it in the action overflow and label it "Settings". Place it below
 all other items except "Help".</p>
 
-<img src="/design/media/settings_overflow.png">
+<img src="../media/settings_overflow.png">
 
 <div class="vspace size-2">&nbsp;</div>
 
@@ -44,7 +44,7 @@ overwhelming.</p>
 "just make it a setting". For each control you're considering adding to Settings, make sure it
 meets the bar:</p>
 
-<img src="/design/media/settings_flowchart.png">
+<img src="../media/settings_flowchart.png">
 
 <div class="vspace size-3">&nbsp;</div>
 
@@ -75,7 +75,7 @@ dividers.</p>
   </div>
   <div class="layout-content-col span-8">
 
-    <img src="/design/media/settings_grouping.png">
+    <img src="../media/settings_grouping.png">
 
   </div>
 </div>
@@ -171,7 +171,7 @@ the advice suggested above for the reduced list size.</p>
   </div>
   <div class="layout-content-col span-10">
 
-<img src="/design/media/settings_checkbox.png">
+<img src="../media/settings_checkbox.png">
 
   </div>
 </div>
@@ -186,7 +186,7 @@ user can choose only one.</p>
   </div>
   <div class="layout-content-col span-10">
 
-<img src="/design/media/settings_multiple_choice.png">
+<img src="../media/settings_multiple_choice.png">
 
   </div>
 </div>
@@ -201,7 +201,7 @@ continuum.</p>
   </div>
   <div class="layout-content-col span-10">
 
-<img src="/design/media/settings_slider.png">
+<img src="../media/settings_slider.png">
 
   </div>
 </div>
@@ -215,7 +215,7 @@ continuum.</p>
   </div>
   <div class="layout-content-col span-10">
 
-<img src="/design/media/settings_date_time.png">
+<img src="../media/settings_date_time.png">
 
   </div>
 </div>
@@ -236,7 +236,7 @@ first step in the sequence.</li>
   </div>
   <div class="layout-content-col span-10">
 
-<img src="/design/media/settings_subscreen_navigation.png">
+<img src="../media/settings_subscreen_navigation.png">
 
   </div>
 </div>
@@ -254,7 +254,7 @@ the list appear in the action bar rather than the list itself.</p>
   </div>
   <div class="layout-content-col span-10">
 
-<img src="/design/media/settings_list_subscreen.png">
+<img src="../media/settings_list_subscreen.png">
 
   </div>
 </div>
@@ -272,7 +272,7 @@ empty. If any actions require the switch to be on, they become disabled.</p>
   </div>
   <div class="layout-content-col span-10">
 
-<img src="/design/media/settings_master_on_off.png">
+<img src="../media/settings_master_on_off.png">
 
   </div>
 </div>
@@ -289,7 +289,7 @@ it's initially set up and more often just want to toggle the switch.</p>
   </div>
   <div class="layout-content-col span-10">
 
-<img src="/design/media/settings_master_on_off_2.png">
+<img src="../media/settings_master_on_off_2.png">
 
   </div>
 </div>
@@ -309,7 +309,7 @@ does, we made the status more descriptive than just "On".</p>
   </div>
   <div class="layout-content-col span-10">
 
-<img src="/design/media/settings_individual_on_off.png">
+<img src="../media/settings_individual_on_off.png">
 
   </div>
 </div>
@@ -330,7 +330,7 @@ master on/off switch so that your main settings screen isn't cluttered by lots o
   </div>
   <div class="layout-content-col span-10">
 
-<img src="/design/media/settings_dependency.png">
+<img src="../media/settings_dependency.png">
 
   </div>
 </div>
@@ -348,9 +348,9 @@ questions (when applicable) may help inform your decisions:</p>
 <li>Which choice is the least risky, controversial, or over-the-top?</li>
 <li>Which choice uses the least amount of battery or mobile data?</li>
 <li>Which choice best supports the design principle
-<a href="/design/get-started/principles.html#never-lose-my-stuff">Never lose my stuff</a>?</li>
+<a href="../get-started/principles.html#never-lose-my-stuff">Never lose my stuff</a>?</li>
 <li>Which choice best supports the design principle
-<a href="/design/get-started/principles.html#interrupt-only-if-important">Only interrupt
+<a href="../get-started/principles.html#interrupt-only-if-important">Only interrupt
 me if it's important</a>?
 </li>
 </ul>
@@ -383,7 +383,7 @@ or off, label it "Notifications" instead of "Notify me".</li>
 </ul>
 
 <p>Once you've decided on labels for your settings, be sure to preview them on an
-<a href="/design/style/metrics-grids.html">LDPI handset</a> in portrait to make sure
+<a href="../style/metrics-grids.html">LDPI handset</a> in portrait to make sure
 they'll fit everywhere.</p>
 
 <h4>Secondary text below is for status, not description&hellip;</h4>
@@ -444,7 +444,7 @@ it or provide instructions. Starting in Ice Cream Sandwich, we're using secondar
 <li>Users can see at a glance what the current value of a setting is without having to navigate
 any further.</li>
 <li>It applies the design principle
-<a href="/design/get-started/principles.html#keep-it-brief">Keep it brief</a>, which
+<a href="../get-started/principles.html#keep-it-brief">Keep it brief</a>, which
 users greatly appreciate.</li>
 </ul>
 
