일부 표현 수정 .

--- a/building-blocks/dialogs.html
+++ b/building-blocks/dialogs.html
@@ -71,12 +71,12 @@ title: 대화 상자
   <div class="layout-content-col span-5">
 
 <h4>타이틀 바가 있는 경고 창</h4>
-<p>타이틀 바가 있는 경고 창은 드물게 사용합니다. 잠재적인 데이터, 연결 손실이나, 
-특별한 요금이 발생할 경우를 수반하는 등의 매우 위험한 동작을 수행할 때에만 적당하며,
-명확한 질문이나 문장(타이틀) 그리고 약간의 추가 설명(컨텐츠 영역)이 필요합니다.</p>
+<p>타이틀 바가 있는 경고 창은 드물게 사용합니다. 경고 창은 잠재적인 데이터 및 연결 손실이나
+특별한 비용이 발생할 경우와 같이 매우 위험한 동작을 수행할 때에만 적당하며,
+(타이틀에는) 명확한 질문이나 문장과 (컨텐츠 영역에는) 약간의 추가 설명이 필요합니다.</p>
 <p>질문이나 문장을 간결하게 하세요: 예를 들면 "USB 저장소를 지우시겠습니까?"는 
 양해를 구하는 말이 없습니다. 사용자가 내용을 완전히 건너뛰어도 동작 버튼의 
-텍스트와 타이틀을 기반으로 어떤 선택을 할 수 있는지 명확한 의미를 알고 있어야 합니다.</p>
+텍스트와 타이틀을 기반으로 어떤 선택을 할 수 있는지 명확한 의미를 알 수 있어야 합니다.</p>
 
   </div>
 </div>
