아이템 -> 항목 : 번역용어가 엄연히 존재하는 상황에서 음역은 부 적절합니다. 기각\!

--- a/patterns/actionbar.html
+++ b/patterns/actionbar.html
@@ -334,7 +334,7 @@ title: 액션 바
 </ul>
 <img src="../media/action_bar_pattern_table.png">
 <div class="figure-caption">
-  위의 표에서 "o"는 액션 바 아이템을, "="는 오버플로우 아이콘을 가리킵니다.
+  위의 표에서 "o"는 액션 바 항목을, "="는 오버플로우 아이콘을 가리킵니다.
 </div>
 
 
