--- a/patterns/gestures.html
+++ b/patterns/gestures.html
@@ -10,7 +10,7 @@ title: 제스처
   <div class="layout-content-col span-4">
 
     <img src="../media/gesture_touch.png"><h4>터치</h4>
-<p>선택한 아이템의 기본 기능을 작동합니다.</p>
+<p>선택한 항목의 기본 기능을 작동합니다.</p>
 
 <ul>
 <li class="no-bullet with-icon action">
