--- a/style/iconography.html
+++ b/style/iconography.html
@@ -185,7 +185,7 @@ title: 아이콘
 <h2 id="small-contextual">작은 아이콘, 컨텍스트 아이콘</h2>
 
 
-<p>앱에서 특정 아이템의 액션이나 상태를 나타내기 위해 작은 아이콘을 사용하세요. 
+<p>앱에서 특정 항목의 액션이나 상태를 나타내기 위해 작은 아이콘을 사용하세요. 
 예를 들어 Gmail 앱에서는 중요하다는 표시를 위한 별모양 아이콘이 메세지마다 있습니다.</p>
 
 
