--- a/style/touch-feedback.html
+++ b/style/touch-feedback.html
@@ -38,7 +38,7 @@ title: 터치 피드백
 <h4>커뮤니케이션</h4>
 <p>객체가 더 복잡한 제스처에 반응한다면 사용자는 작업 결과를 더 쉽게 예상합니다.
 예를 들어 최근 앱에서 섬네일을 왼쪽이나 오른쪽로 스와이프하기 시작하면 섬네일도 희미해지기 시작합니다.
-사용자는 이 반응으로 스와이프를 하면 아이템이 사라진다고 예상합니다.</p>
+사용자는 이 반응으로 스와이프를 하면 항목이 사라진다고 예상합니다.</p>
 
   </div>
   <div class="layout-content-col span-9">
