--- a/patterns/app-structure.html
+++ b/patterns/app-structure.html
@@ -221,7 +221,7 @@ Gmail이나 Google Play는 다양한 데이터 뷰가 계층 구조로 조합되
 
 <p>
 지름길로 목표에 빨리 도달하게 해 주면 좋습니다.
-리스트나 그리드 뷰에서 드롭다운이나 분할 리스트 아이템을 통해 수행할 액션을 바로 보여줄 수 있습니다.
+리스트나 그리드 뷰에서 드롭다운이나 분할 리스트 항목을 통해 수행할 액션을 바로 보여줄 수 있습니다.
 이 방법은 계층 아래로 내려가지 않고 데이터에서 액션을 선택할 수 있게 합니다.
 </p>
 
@@ -281,7 +281,7 @@ Music은 사용자가 카테고리 뷰(앨범)에서 데이터 항목(노래)의
 
 <h4>상세 뷰를 효과적으로 탐색하기</h4>
 
-<p>사용자가 순차적으로 여러 아이템을 보고 싶어 할 것 같으면 상세 뷰 안에서 탐색할 수 있도록 하세요.
+<p>사용자가 순차적으로 여러 항목을 보고 싶어 할 것 같으면 상세 뷰 안에서 탐색할 수 있도록 하세요.
 그렇게 하기 위해 뷰 스와이프나 필름 스트립 같은 다른 방법을 도입하세요.</p>
 
 
@@ -315,6 +315,6 @@ Music은 사용자가 카테고리 뷰(앨범)에서 데이터 항목(노래)의
 <p>데이터의 묶음에 사용자가 명령할 수 있게 다중 선택을 지원하세요.</p>
 </li>
 <li>
-<p>여러 상세 아이템 사이를 빨리 탐색하기 위해 스와이프 뷰 등을 사용하세요.</p>
+<p>여러 상세 항목 사이를 빨리 탐색하기 위해 스와이프 뷰 등을 사용하세요.</p>
 </li>
 </ul>
