--- a/patterns/selection.html
+++ b/patterns/selection.html
@@ -47,8 +47,8 @@ title: 선택
 
 <p>여기서 사용자가 할 수 있는 것:</p>
 <ul>
-<li>아이템을 터치해서 추가적으로 아이템을 선택하세요.</li>
-<li>하이라이트된 모든 데이터 아이템들에게 컨텍스트 액션 바에 있는 액션을
+<li>항목을 터치해서 추가적으로 항목을 선택하세요.</li>
+<li>하이라이트된 모든 데이터 항목들에게 컨텍스트 액션 바에 있는 액션을
 수행하세요. 이후 컨텍스트 액션 바는 자동적으로 사라집니다.</li>
 <li>Back 버튼 또는 컨텍스트 액션 바의 체크마크 버튼으로 컨텍스트 액션 바를
 사라지게 하세요. 선택했던 모든 하이라이트들도 컨텍스트 액션 바와 함께 사라집니다.</li>
@@ -65,17 +65,17 @@ title: 선택
   <div class="layout-content-col span-6">
 
 <h4>컨텍스트 액션 바의 액션 선택하기</h4>
-<p>여러분들은 컨텍스트 액션 바에 표시할 액션과 요소들을 결정 할 수 있습니다. 어느 아이템이 꼭대기에 위치할지,액션 오버플로우에 위치할지를 결정하기위해 <a href="actionbar.html">액션 바 패턴</a> 가이드라인을 사용하세요.</p>
+<p>여러분들은 컨텍스트 액션 바에 표시할 액션과 요소들을 결정 할 수 있습니다. 어느 항목이 꼭대기에 위치할지,액션 오버플로우에 위치할지를 결정하기위해 <a href="actionbar.html">액션 바 패턴</a> 가이드라인을 사용하세요.</p>
 <h4>컨텍스트 액션 바의 액션을 동적으로 변경하기</h4>
-<p>사용자가 선택에 아이템을 더 추가하는 대부분의 경우, 여러분들은 컨텍스트
+<p>사용자가 선택에 항목을 더 추가하는 대부분의 경우, 여러분들은 컨텍스트
     액션 방의 액션들을 동적으로 변경해야만 합니다. 
-하나만 선택된 데이터 아이템에 적용하는 액션들이 다중 선택된 같은 종류의 데이터 아이템에 적용되지는 않습니다.</p>
+하나만 선택된 데이터 항목에 적용하는 액션들이 다중 선택된 같은 종류의 데이터 항목에 적용되지는 않습니다.</p>
 
   </div>
   <div class="layout-content-col span-7">
 
     <img src="../media/selection_adjusting_actions.png"><div class="figure-caption">
-      추가 아이템이 선택된 경우에 컨텍스트 액션 바의 액션들이 변경됨.
+      추가 항목이 선택된 경우에 컨텍스트 액션 바의 액션들이 변경됨.
     </div>
 
   </div>
@@ -86,7 +86,7 @@ title: 선택
 
 <ul>
 <li>
-<p>여러분의 앱이 다중 데이터 아이템 선택을 지원할 때마다, 컨텍스트 액션 바(CAB)를 사용하십시요.</p>
+<p>여러분의 앱이 다중 데이터 항목 선택을 지원할 때마다, 컨텍스트 액션 바(CAB)를 사용하십시요.</p>
 </li>
 <li>
 <p>롱 프레스 제스처는 선택에만 한정해서 사용하세요. 전형적인 컨텍스트 메뉴를 표시하는 방법으로 사용하지 마세요.</p>
