--- a/patterns/app-structure.html
+++ b/patterns/app-structure.html
@@ -3,7 +3,7 @@ layout: default
 title: 애플리케이션 구조
 ---
 <p>
-앱은 여러 요구 사항에 맞추어 다양한 형태를 지닙니다. 예를 들면,
+앱은 아래 예와 같이 다양한 요구에 따라 다양한 구조로 만들어집니다.
 </p>
 
 <ul>
@@ -18,7 +18,7 @@ Gmail이나 Google Play는 다양한 데이터 뷰가 계층 구조로 조합되
 </li>
 </ul>
 <p>
-여러분의 앱 구조는 그 앱이 가지는 컨텐츠와 사용자가 사용하길 원하는 작업에 크게 달려있습니다.
+앱의 구조는 앱이 담을 컨텐츠와 사용자가 사용하기를 원하는 작업에 따라 달라져야 합니다.
 </p>
 
 <h2 id="general-structure">일반 구조</h2>
@@ -79,7 +79,7 @@ Gmail이나 Google Play는 다양한 데이터 뷰가 계층 구조로 조합되
 
 <h4>컨텐츠를 전면에</h4>
 <p>
-많은 앱들이 컨텐츠 표시에 집중합니다.
+많은 앱이 컨텐츠 표시에 집중합니다.
 탐색만 하는 화면을 만들지 말고 시작 화면 중앙에 컨텐츠를 두어 사용자가 앱의 알맹이를 바로 얻을 수 있도록 하세요.
 데이터 타입과 화면 크기에 적합하고 시각적으로 두각시킬 수 있는 레이아웃을 선택하세요.
 </p>
@@ -88,7 +88,7 @@ Gmail이나 Google Play는 다양한 데이터 뷰가 계층 구조로 조합되
   <div class="layout-content-col span-8">
 
     <img src="../media/app_structure_market.png"><div class="figure-caption">
-      Google Play 앱의 시작 화면에서는 먼저 앱, 음악, 책, 영화, 게임 상점을 탐색할 수 있습니다.
+      Google Play 앱의 시작 화면에서는 먼저 앱, 음악, 책, 영화, 게임 상점으로 이동할 수 있습니다.
       사용자에게 흥미로운 컨텐츠가 나열된 잘 정리된 추천과 홍보물도 가득합니다.
       검색은 액션 바를 통해 보기좋게 쓸 수 있습니다.
    </div>
@@ -196,7 +196,7 @@ Gmail이나 Google Play는 다양한 데이터 뷰가 계층 구조로 조합되
     <img src="../media/app_structure_scrolltabs.png"><div
     class="figure-caption">
       Google Play는 탭을 사용하여 카테고리 선택과 컨텐츠를 동시에 보여줍니다.
-    사용자는 컨텐츠를 좌우로 스와이프하여 카테고리 사이를 탐색할 수 있습니다.
+    사용자는 컨텐츠를 좌우로 스와이프하여 카테고리 사이를 이동할 수 있습니다.
     </div>
 
   </div>
@@ -229,7 +229,7 @@ Gmail이나 Google Play는 다양한 데이터 뷰가 계층 구조로 조합되
 <img src="../media/app_structure_shortcut_on_item.png">
 <div class="figure-caption">
 Music은 사용자가 카테고리 뷰(앨범)에서 데이터 항목(노래)의 액션을 바로 할 수 있기 때문에,
-노래 상세 뷰를 탐색할 필요가 없습니다.
+노래 상세 뷰로 이동할 필요가 없습니다.
 </div>
 
 
