style/color.html 표현 수정

--- a/style/color.html
+++ b/style/color.html
@@ -90,7 +90,7 @@ title: 색상
   }
 </style>
 <p>강조를 위해서는 기본 색상을 사용하세요. 브랜드에 어울리고 시각 요소 사이에 대비를 잘 보여주는 색을 고르세요.
-빨간색과 초록색은 색맹 사용자들이 구분할 수 없을지도 모른다는 점을 기억하세요.</p>
+빨간색과 초록색은 색맹 사용자는 구분할 수 없을지도 모른다는 점을 기억하세요.</p>
 
     
 <div class="color-row-container">
@@ -118,7 +118,7 @@ title: 색상
 <h2 id="palette">팔레트</h2>
 
 
-<p>푸른색은 안드로이드 색상 팔레트의 표준 강조색입니다.
+<p>파란색은 안드로이드 색상 팔레트의 표준 강조색입니다.
 필요할 때 보완하여 사용할 수 있게 각각의 색은 어두운 그림자색이 있습니다.</p>
 
 <p><a href="https://dl-ssl.google.com/android/design/Android_Design_Color_Swatches_20120229.zip">견본 다운로드</a></p>
