a52cb711 에서 실수로 빠뜨린 쉼표를 다시 넣음

--- a/patterns/gestures.html
+++ b/patterns/gestures.html
@@ -41,7 +41,7 @@ title: 제스처
 <ul>
 <li class="no-bullet with-icon action">
     <h4>행동</h4>
-    <p>누르고 움직이고 뗍니다</p>
+    <p>누르고, 움직이고, 뗍니다</p>
 </li>
 </ul>
 </div>
